2015-06-03 Rustem Ospanov <rustem at cern.ch>
	* Fill truth branches only for selected truth particles
	* Change muon ID and n prec hits variables to short
	* Fix compilation warnings from ordering of varibles in ctor
	* Change PtME to PtMS
	* Save loose muons with eta up to 2.7
	
2015-06-02 Giuseppe Salamanna <salaman AT cern.ch>
	* Added truth origin and type for leptons (from MCTruthClassifier)
	* Changed muon quality type to unsigned short int from bool
	* Added muon type and lepton d0
	* Lowered cuts for leptons and jets to very low values to be genuinely inclusive
	
2015-05-29 David Hohn <david.hohn@cern.ch>
	* Added reading/writing of taus

2015-05-29 Giuseppe Salamanna <salaman AT cern.ch>
	* Adding a setup script for grid: setupRCandGrid.sh
	* Updated README instructions
	
2015-05-28 Giuseppe Salamanna <salaman AT cern.ch>
	* Moved to using theta() from TrackParticle class to 
	compute lepton z0sinTh
	
2015-05-28 Giuseppe Salamanna <salaman AT cern.ch>
	* Wrap2 et al. now use std::function.  This means you can use capturing lambdas
	to define variables (Peter).
	* Added some  more muon variables, among which quality flags
	
2015-05-22 Giuseppe Salamanna <salaman AT cern.ch>
	* Update README instructions to point to new common area
	
2015-05-22 Giuseppe Salamanna <salaman AT cern.ch>
	* First import into common area atlasphys-hsg8/browser/Physics/Higgs/HSG8/AnalysisCode/multileptons/xAOD
	* Add trigger decision tool config, trigger decisions and associated PS
	
2015-05-09 Peter Onyisi <ponyisi AT cern.ch>
	* Catch exceptions for variables that don't actually exist in input, log failure but
	  keep going
	* Make Wrap functionality simpler (-> Wrap2).  Now type of output tree variable is
	  inferred from return type of lambda functions.

2015-05-06 Kun LIU <kliu@cern.ch>
	* update for Giuseppe Salamanna
	* add variables for met, muons and electrons and truth info.

2015-05-06 Peter Onyisi <ponyisi AT cern.ch>
	* Change electron decoration bool -> short
